src/components/sbb-slider/sbb-slider.scss
// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include host-component-properties;

:host {
  --sbb-slider-line-height: #{px-to-rem-build(4)};
  --sbb-slider-value-fraction: 0;
  --sbb-slider-step-fraction: 0;
  --sbb-slider-step-gap: #{px-to-rem-build(4)};
  --sbb-slider-knob-size: #{px-to-rem-build(28)};
  --sbb-slider-knob-border-size: #{px-to-rem-build(3)};
  --sbb-slider-icon-color: var(--sbb-color-black-default);
  --sbb-slider-selected-line-color: var(--sbb-color-red-default);
  --sbb-slider-selected-line-disabled-color: var(--sbb-color-smoke-default);
  --sbb-slider-line-color: var(--sbb-color-smoke-default);
  --sbb-slider-line-disabled-color: var(--sbb-color-graphite-default);

  @include ifForcedColors {
    --sbb-slider-selected-line-color: Highlight;
    --sbb-slider-line-color: CanvasText;
  }

  line-height: var(--sbb-typo-line-height-body-text);
}

// override icons color
:host([disabled]) {
  --sbb-slider-icon-color: var(--sbb-color-graphite-default);
}

:host([readonly]) {
  --sbb-slider-icon-color: var(--sbb-color-smoke-default);
}

:host([disabled]),
:host([readonly]) {
  @include ifForcedColors {
    --sbb-slider-icon-color: GrayText;
    --sbb-slider-selected-line-disabled-color: GrayText;
    --sbb-slider-line-disabled-color: GrayText;
  }
}

.sbb-icon {
  color: var(--sbb-slider-icon-color);
}

.sbb-slider__wrapper {
  max-width: #{px-to-rem-build(400)};
  min-width: #{px-to-rem-build(150)};
  width: 100%;
  display: flex;
  gap: var(--sbb-spacing-fixed-2x);
  padding-block: var(--sbb-spacing-fixed-1x);
}

.sbb-slider__container {
  position: relative;
  flex-grow: 1;
}

.sbb-slider__range-input {
  position: absolute;
  width: 100%;
  inset: 0;
  opacity: 0;
  margin: 0;
}

.sbb-slider__line {
  @include absoluteCenterY;

  height: var(--sbb-slider-line-height);
  width: 100%;
  border-radius: var(--sbb-slider-line-height);
  overflow: hidden;
  pointer-events: none;

  &:not(.sbb-slider__line--stepped) {
    background-color: var(--sbb-slider-line-color);
  }
}

.sbb-slider__line-disabled,
.sbb-slider__line-readonly {
  @include absoluteCenterY;

  height: var(--sbb-slider-line-height);
  width: 100%;
  border-radius: var(--sbb-slider-line-height);
  overflow: hidden;
  pointer-events: none;

  &:not(.sbb-slider__line--stepped) {
    background-color: var(--sbb-slider-line-disabled-color);
  }
}

.sbb-slider__line--stepped {
  background: repeating-linear-gradient(
    to right,
    transparent 0,
    transparent var(--sbb-slider-step-gap),
    var(--sbb-slider-line-color) var(--sbb-slider-step-gap),
    var(--sbb-slider-line-color) calc(var(--sbb-slider-step-fraction) * 100%)
  );
}

.sbb-slider__selected-line {
  position: relative;
  height: 100%;
  background-color: var(--sbb-slider-selected-line-color);
  width: calc(var(--sbb-slider-value-fraction) * 100%);
}

.sbb-slider__selected-line-disabled,
.sbb-slider__selected-line-readonly {
  position: relative;
  height: 100%;
  background-color: var(--sbb-slider-selected-line-disabled-color);
  width: calc(var(--sbb-slider-value-fraction) * 100%);
}

.sbb-slider__knob,
.sbb-slider__knob-disabled,
.sbb-slider__knob-readonly {
  @include absoluteCenterY;
  @include shadow-level-5-hard;

  width: var(--sbb-slider-knob-size);
  height: var(--sbb-slider-knob-size);
  inset-inline-start: calc(
    calc(var(--sbb-slider-value-fraction) * 100%) - var(--sbb-slider-knob-size) *
      var(--sbb-slider-value-fraction)
  );
  transition-property: width, height;
  transition-duration: var(--sbb-animation-duration-1x);
  transition-timing-function: ease-in;
  background-color: var(--sbb-color-white-default);
  border: var(--sbb-slider-knob-border-size) solid var(--sbb-slider-selected-line-color);
  border-radius: 50%;
  pointer-events: none;
}

.sbb-slider__knob-disabled {
  background-color: var(--sbb-color-milk-default);
  border-color: var(--sbb-slider-line-disabled-color);
}

.sbb-slider__knob-readonly {
  border-color: var(--sbb-slider-selected-line-disabled-color);
}

// slider knob resize on click (active / focus)
.sbb-slider__range-input:active ~ .sbb-slider__knob,
.sbb-slider__range-input:focus-visible ~ .sbb-slider__knob {
  --sbb-slider-knob-size: #{px-to-rem-build(31)};
}

